tools/tests/ui/fail/l1003.cnf
// Test file for error code: L1003
// Expected error: Invalid Underflow character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
